--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^4.4.8",
     "morgan": "~1.6.1",
     "passport": "^0.3.2",
+    "passport-facebook": "^2.1.0",
     "passport-local": "^1.0.0",
     "serve-favicon": "~2.3.0",
     "static-favicon": "^2.0.0-alpha"
